chore: added client service
